# photo-cat

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  README_IT.md  REUSE.toml  START_HERE.txt  START_LINUX.sh  START_MACOS.command  START_UNIX.sh  START_WINDOWS.bat  config.yaml  pyproject.toml  requirements.txt
data/: README.md  README_IT.md  example_catalog.csv  example_targets.csv
docs/: Architecture.md  Architecture_IT.md  Command-line.md  Command-line_IT.md  Configuration.md  Configuration_IT.md  Development.md  Development_IT.md  Download-and-usage.md  Download-and-usage_IT.md  Input-data.md  Input-data_IT.md  PUBLISHING.md  PUBLISHING_IT.md  Pipeline-and-output_IT.md  Public-Contracts.md  Public-Contracts_IT.md  README_IT.md  Runtime-and-Python.md  Runtime-and-Python_IT.md  START_HERE_IT.txt  Troubleshooting.md  Troubleshooting_IT.md
scripts/: README.md  README_IT.md  configure_linux_macos.sh  configure_windows.bat  fix_console_window.ps1  install_linux_macos.sh  install_windows.bat  run_linux_macos.sh  run_pipeline_unix.sh  run_pipeline_windows.bat  run_windows.bat  start_linux_macos.sh  start_windows.ps1
src/: Configuration.py  Contaminant.py  README.md  README_IT.md  Target_Result.py  build_neighbors_index.py  config_and_run.py  configure_gui.py  install.py  load_config.py  logger_setup.py  query_contamination_from_index.py
tests/: conftest.py  test_build_helpers.py  test_cli_errors.py  test_doctor.py  test_doctor_diagnostics.py  test_doctor_json.py  test_input_validation.py  test_load_config.py  test_pipeline_orchestration.py  (+4 more)
(+23 files in other folders)
